# ChangeLog for games-simulation/planets
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-simulation/planets/ChangeLog,v 1.17 2009/01/19 23:56:42 mr_bones_ Exp $

  19 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
  planets-0.1.13.ebuild:
  EAPI=2; add use-based dep

  22 Jun 2008; Christian Faulhammer <opfer@gentoo.org>
  planets-0.1.13.ebuild:
  stable x86, bug 228609

  21 Jun 2008; nixnut <nixnut@gentoo.org> planets-0.1.13.ebuild:
  Stable on ppc wrt bug 228609

  21 Jun 2008; Friedrich Oslage <bluebird@gentoo.org> planets-0.1.13.ebuild:
  Stable on sparc, bug #228609

  20 Jun 2008; Kenneth Prugh <ken69267@gentoo.org> planets-0.1.13.ebuild:
  amd64 stable, bug #228609

*planets-0.1.13 (29 Jun 2007)

  29 Jun 2007; Tristan Heaven <nyhm@gentoo.org> +planets-0.1.13.ebuild:
  Version bump

  04 Nov 2006; Tristan Heaven <nyhm@gentoo.org> planets-0.1.10.ebuild,
  planets-0.1.12.ebuild:
  Fix built_with_use check, bug #154056

*planets-0.1.12 (17 Sep 2006)

  17 Sep 2006; <tupone@gentoo.org> +planets-0.1.12.ebuild:
  Version bump. Bug #139938 by Michael Vogt

  24 May 2006; Michael Sterrett <mr_bones_@gentoo.org>
  planets-0.1.10.ebuild:
  Check dev-lang/ocaml use flags needed for build (bug #134257)

  26 Dec 2005; Jason Wever <weeve@gentoo.org> planets-0.1.10.ebuild:
  Stable on SPARC.

  04 May 2005; Jan Brinkmann <luckyduck@gentoo.org> planets-0.1.10.ebuild:
  addd ~amd64 to KEYWORDS, fixes #91445

  16 Dec 2004; Joseph Jezak <josejx@gentoo.org> planets-0.1.10.ebuild:
  Marked ppc stable.

  13 Aug 2004; Jason Wever <weeve@gentoo.org> planets-0.1.10.ebuild:
  Added ~sparc keyword.

  03 Aug 2004; David Holm <dholm@gentoo.org> planets-0.1.10.ebuild:
  Added to ~ppc.

*planets-0.1.10 (22 Jun 2003)

  22 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Ron <doobedoobedo@quake3world.com> #17248.