@@ -1,4 +1,14 @@
-DIST planets-0.1.13.tgz 49732 RMD160 aca43156b191f221f257ab1738d33621d2277016 SHA1 76f530a81c86afd4f8c43589a8dfd1e51892a975 SHA256 cd4be19dc1e16cc3d5bb20fdfa2af025b50cd21dbce5d1e8b3041c4e786c3624
-EBUILD planets-0.1.13.ebuild 771 RMD160 12c8d3b1c12eced2c0100808683319db84ee8b68 SHA1 536b3623bd25314b3bda9eede7233a5b82b1d1cb SHA256 d8aeccc30f93266c69d6e395f9488a144b78547c3b3f15484406c563dde409cd
-MISC ChangeLog 1928 RMD160 144bcd25285777fc7b8a8798d13fd756065c1c63 SHA1 4786aa66d630a14887af9974a50cdc653468a0c2 SHA256 23e3ccba81ec61a30aedf621188f5db3a3ce08e14de89569e3def5353cc9b821
-MISC metadata.xml 158 RMD160 cbd9984bb6b426c8c9cee5022fe0a26261612fea SHA1 be5251fa1dacef5c41b74761bb1c8c54fb633b9e SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST planets-0.1.13.tgz 49732 SHA256 cd4be19dc1e16cc3d5bb20fdfa2af025b50cd21dbce5d1e8b3041c4e786c3624 SHA512 fdfc2cde52baaac71683fbf31b6fe09f6bec81650842eb6b88dbc34d643142f73a89a935db028ab000d3fa33e1646b28558e398bb0eddba273f94e429e61a67d WHIRLPOOL 3980b333761185525d4f91caee6f850d086954c5f119b66827f3a1b4a91e85d35a302fad941139732d1e813d539172652beda5fe7776f78925a6d8fc33c4cf0b
+EBUILD planets-0.1.13.ebuild 741 SHA256 442c5e0ad1a9e24b484d178dbf101633b72dc974233902d78e1bd5c205c3127e SHA512 f84d361d015df3e5e357f8715ca60e0c1800ed81b0b4d04746a18f5491b1e9845f878d07d6dadd221a8077e0987a31c0453c1e1415836891ff86a0545cf9f87b WHIRLPOOL aa50fd86a9f2a8e8123ac8f9d0896a744dbd32f969094c0a6c8ba2c5ccf8e8ccb92c54af9a473a2009d98edeec022d18ab5efa5506a90119d78f4c4cb7bbe5c3
+MISC ChangeLog 2008 SHA256 32f304be95e671d61376a4436721abe82a3b7d55be184629357c34636f0474d7 SHA512 0d4a4638f3eca9b79ff8d0f769c249050d67ec71643ad404c6b0d5039f8116220cb0e4e1fa1937b77395e30e6de172f1665f04bc78173ad97d67fd11350b9fb1 WHIRLPOOL 95947b89d2baaae3bf5f727cdd21a4ab36ea1a8ec9446e4fd5aa754607f9b4133318b09cbca870202efba9a969102827bb68bf9745d6fda84e820620bc9a0bcf
+MISC metadata.xml 158 SHA256 1423a4fdd4a79b1728a2056d9e300f7e1074253095d82726218d9e9b953888a3 SHA512 d954564236b67b6ab97846b73f74e715e8f1bec2dba6595e9a5046c2e8c3b93f4879c293f9d1d02d99a533bee56156dae3f31a485697128c51af14cdbfdada8a WHIRLPOOL d03e7293d09d794d61c095a423f945b3644355a247f270a73ca8d30b4dfe9c98244297536bfd1a4bd6c14794aa1152eca20fd83bfdf3e1e74d4f676152d35ada
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iEUEAREIAAYFAlT7cZcACgkQIY77eQFFFC2yNQCgkZDEUfMMJS0XuyUQ9sdIo7V3
+apoAmNeXOdi0TZw12qA74QJOHZNDL3U=
+=ivJK
+-----END PGP SIGNATURE-----
