@@ -1,6 +1,9 @@
 # ChangeLog for games-simulation/planets
-# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-simulation/planets/ChangeLog,v 1.17 2009/01/19 23:56:42 mr_bones_ Exp $
+# Copyright 2000-2015 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/games-simulation/planets/ChangeLog,v 1.18 2015/03/07 21:45:58 tupone Exp $
+
+  07 Mar 2015; Tupone Alfredo <tupone@gentoo.org> planets-0.1.13.ebuild:
+  EAPI 5
 
   19 Jan 2009; Michael Sterrett <mr_bones_@gentoo.org>
   planets-0.1.13.ebuild:
